Fix tests spark session interference